@@ -8,8 +8,10 @@ int main(int argc, char **argv)
 	PlayerClient    robot("localhost");
 	Position2dProxy pp(&robot, 0);
 
+	pp.SetMotorEnable(true);
+	pp.GetXPos();
+
 	while (true) {
-		robot.Read();
 	}
 
 	return 0;
