@@ -3,6 +3,8 @@
 	   It can be built with a "make test-fribbler", or simply "make all",
 	   which will make all targets.
 
+	2. Added preliminary message processing code.
+
 20091104 - Mark:
 	1. Interesting tidbit that wasted some of my time:
 	   You must provide (Add) at LEAST one interface in the driver's constructor
